[gd_scene load_steps=4 format=3 uid="uid://cp4f1m5348nx3"]

[ext_resource type="Theme" uid="uid://eu2836nyqrtf" path="res://menu_button.tres" id="1_38oj7"]
[ext_resource type="Script" path="res://Scripts/home_button.gd" id="2_ll132"]
[ext_resource type="Script" path="res://Scripts/Gold.gd" id="3_dqmpt"]

[node name="Home" type="Node2D"]

[node name="Button" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2998.0
offset_top = 1742.0
offset_right = 3785.0
offset_bottom = 1945.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_38oj7")
text = "Main Menu"
script = ExtResource("2_ll132")

[node name="Gold" type="Node" parent="."]
script = ExtResource("3_dqmpt")

[node name="Gold_Label" type="Label" parent="Gold"]
offset_left = 96.0
offset_top = 96.0
offset_right = 1142.0
offset_bottom = 294.0
theme = ExtResource("1_38oj7")
text = "Gold: 1,000,000"

[node name="plus" type="Button" parent="Gold"]
offset_left = 418.0
offset_top = 327.0
offset_right = 616.0
offset_bottom = 530.0
theme = ExtResource("1_38oj7")
text = "+"

[node name="minus" type="Button" parent="Gold"]
offset_left = 166.0
offset_top = 327.0
offset_right = 364.0
offset_bottom = 530.0
theme = ExtResource("1_38oj7")
text = "-"

[node name="Save" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 96.0
offset_top = 1742.0
offset_right = 425.0
offset_bottom = 1945.0
grow_vertical = 0
theme = ExtResource("1_38oj7")
text = "Save"

[node name="Load" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 479.0
offset_top = 1742.0
offset_right = 808.0
offset_bottom = 1945.0
grow_vertical = 0
theme = ExtResource("1_38oj7")
text = "Load"

[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
[connection signal="pressed" from="Gold/plus" to="Gold" method="_on_plus_pressed"]
[connection signal="pressed" from="Gold/minus" to="Gold" method="_on_minus_pressed"]
[connection signal="pressed" from="Save" to="Gold" method="_on_save_pressed"]
[connection signal="pressed" from="Load" to="Gold" method="_on_load_pressed"]
